fixing gap + button

--- a/app/(pages)/_components/pastMissions/pastMissions.module.scss
+++ b/app/(pages)/_components/pastMissions/pastMissions.module.scss
@@ -7,7 +7,7 @@
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  gap: 0.625rem;
+  gap: 2rem;
 }
 
 .header {
@@ -104,6 +104,7 @@
       background: var(--off-white);
       border-color: var(--off-white);
       box-shadow: 0 5px 50px 0 rgba(0, 0, 0, 0.10);
+      width: 14.0625rem;
 
       // text
       color: var(--gray);
